2009-07-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use Automake's new "parallel tests" feature. This uses
	multiple cores more effectively than slt's internal
	parallel process spawning.
	
	* configure.ac: Enable option `parallel-tests'.
	* tests.mk: Use `LOG_COMPILER' instead of `TESTS_ENVIRONMENT'.
	
	* tools/bin/slt.in: Introduce new options `DUMP_LOGS' and
	`SEQUENTIAL'. Document them.
	* tests.mk: Use them.

2009-07-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic changes.
	
	* tools/lib/r-host/run.sh: Rename to...
	* tools/lib/r-host.sh: here.
	* tools/lib/r-mtalpha-sim/run.sh.in: Rename to...
	* tools/lib/r-mtalpha-sim.sh.in: here.
	* tools/lib/r-mtsparc-sim/run.sh: Rename to...
	* tools/lib/r-mtsparc-sim.sh.in: here.

	* tools/bin/slr.in, 
	* tools/lib/Makefile.am,
	* configure.ac: Update accordingly.

2009-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Some more benchmark code.
	
	* programs/benchmarks/quicksort/am-quicksort-iterative.sl,
	* programs/benchmarks/quicksort/sah-quicksort.sl,
	* programs/benchmarks/quicksort/am-quicksort.sl,
	* programs/benchmarks/ll/Makefile.am: Add.

	* tools/lib/seqc.mk: Use AM_V_CC for $(CC).

2009-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' improvement.
	
	* tools/lib/r-host/run.sh,
	* tools/lib/r-mtalpha-sim/run.sh.in,	
	* tools/lib/r-mtsparc-sim/run.sh.in: Prefix $RUNNER_PREFIX to
	command lines, to allow e.g. "time" to be used on programs.
	
	* tools/bin/slr.in: Document it.

2009-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make `slc' look more like GCC's front-end.
	
	* tools/bin/slc.in: Run C compiler even if no input files are
	provided; this to allow -dumpversion, etc. Refuse -M and -MM, but
	be graceful with -M[GPDTQF]. Properly handle -include and other -i
	preprocessor flags. Pass -W*, -d*, -pedantic, -ansi, -std* to both
	preprocessor and compiler. Handle input from `-' (standard input).

2009-06-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Cosmetic fixes.
